tests/fixtures/diagnostics/type-checker/positive/keyof-record-keys/input.tysh
namespace Samples.Keyof

record Customer(Name: string, Age: int)

type CustomerKey = keyof Customer

fun nameKey(): CustomerKey = "Name"

fun ageKey(): CustomerKey = "Age"

fun keyAsString(): string {
  let key: CustomerKey = "Name"
  key
}
