tests/fixtures/diagnostics/type-checker/negative/extension-receiver-mismatch/input.tysh
namespace Samples.Extensions.Negative

public extension string {
  public fun Bad(value: int): bool = true
}
